--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -4,6 +4,19 @@ body {
   color: #4A4A4A;
 }
 
-h1 {
+h1, h2 {
   text-align: center;
+}
+
+.date {
+  font-family: 'IBM Plex Sans';
+}
+
+.date-day {
+  color: #F13A59;
+  font-size: 24px;
+}
+
+.date-month {
+  font-size: 20px;
 }
