--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -25,17 +25,16 @@ a {
   text-decoration: underline,
 }
 
-
-
 .next-meetup {
   background-color: #F3DBD1;
+  padding-top: 15px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .next-meetup-informations {
   display: flex;
-  height: 300px;
-  padding-bottom: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   font-size: 24px;
   line-height: 32px;
 }
@@ -70,4 +69,35 @@ a {
 
 .next-meetup-informations-talks {
   width: 65%;
+}
+
+.next-meetup-informations-talks-one {
+  width: 80%;
+  margin: auto;
+  margin-bottom: 30px;
+}
+
+.next-meetup-informations-talks-two {
+  width: 80%;
+  margin: auto;
+}
+
+.next-meetup-subscribe {
+  display: flex;
+  padding: 0 60px;
+}
+
+.next-meetup-subscribe a {
+  display: block;
+  padding: 18px 48px;
+  font-size: 1.3rem;
+  color: #4A4A4A;
+  text-decoration: none;
+  border: 4px solid #ED1C40;
+  margin-left: auto;
+}
+
+.next-meetup-subscribe a:hover {
+  background-color: #ED1C40;
+  color: #FCFCFC; 
 }
