--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -10,8 +10,12 @@ body {
 }
 
 h1, h2 {
-  text-align: center;
   margin-top: 0;
+  padding: 0px 100px;
+}
+
+h1 {
+  text-align: center;
 }
 
 .description {
