--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -3,6 +3,7 @@ body {
   box-sizing: content-box;
   color: #4A4A4A;
   font-family: "IBM Plex Sans", "Avenir Next", sans-serif;
+  margin: 0;
 }
 
 .header-container {
