--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -39,3 +39,14 @@ a {
 :any-link:active {
   text-decoration: none;
 }
+
+@media screen and (max-width: 600px) {
+  .header-container {
+    padding: 20px 30px;
+  }
+
+  h1, h2 {
+    text-align: center;
+    padding: 0 20px;
+  }
+}
