--- a/packages/@matthieuauger/gatsby-theme-meetup/src/components/Layout/layout.css
+++ b/packages/@matthieuauger/gatsby-theme-meetup/src/components/Layout/layout.css
@@ -44,6 +44,15 @@ a {
   cursor: pointer;
 }
 
+.meetup-list {
+  display: flex;
+  padding: 30px 0 0;
+}
+
+.meetup-list * {
+  margin: auto;
+}
+
 :any-link {
   text-decoration: none;
 }
